--- a/simulaciones-tp5/src/front/CargaDatos.form
+++ b/simulaciones-tp5/src/front/CargaDatos.form
@@ -314,12 +314,15 @@
     </Component>
     <Component class="javax.swing.JTextField" name="desde_txt">
       <Properties>
-        <Property name="text" type="java.lang.String" value="1"/>
+        <Property name="text" type="java.lang.String" value="0"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="desde_txtActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="hasta_txt">
       <Properties>
-        <Property name="text" type="java.lang.String" value="10"/>
+        <Property name="text" type="java.lang.String" value="60"/>
       </Properties>
     </Component>
   </SubComponents>
